--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
     <% if controller.controller_name != "welcome" && controller.action_name != "index" %>
 
       <% if flash[:notice].present? %>
-      <div class="alert onTop alert-danger alert-dismissible fade show" role="alert">
+      <div class="alert onTop alert-success alert-dismissible fade show" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
