--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
 	<div class="row d-flex justify-content-center">
-		<div class="col-md">
+		<div class="col-md content">
 		<h1 class="event"><%= @event.name %></h1>
 		<h5 class="date"> <%= @event.date.strftime('%A %B %d %Y') %></h5>
   <div class="details">
@@ -32,7 +32,7 @@
 		    it. If the object is `nil`, then it will immediately return `nil`.
 		%>
 
-  <div class="col-md-3">
+  <div class="col-md-3 content">
 		<h3>Team Lead </h3>
 		<p> <%= @lead&.full_name %></p>
 		<h3>Created By </h3>
@@ -41,7 +41,7 @@
     <p><%= @event.team&.name %></p>
 	</div>
 
-  <div class="col-md-3">
+  <div class="col-md-3 content">
 
 		<h3>Attendees </h3>
 		<ul class="list-group">
