--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -7,7 +7,7 @@
 
   </div>
  <div class="row">
-   <h3 id="users">Users</h3>
+   <h3 id="users" class="head">Users</h3>
  </div>
 
     <div class="row d-flex justify-content-between">
@@ -28,7 +28,7 @@
                        </div>
                     <% end %>
             </div>
-            <div class='col-md-6' style="border:0">
+            <div class='card col-md-6' style="border:0">
             <div class='card-header'><strong>General Volunteers: </strong><%= @stats[:genvol] %></div>
                     <% @gen_vol_users.each do |volunteer| %>
                         <div class="mt-2 mb-2">
@@ -63,8 +63,8 @@
                     <% end %>
             </div>
         </div>
-    <h3 class="mt-3" id="events">Current Events</h3>
-    <table class='table table-bordered table-striped'>
+    <h3 class="mt-3 head" id="events">Current Events</h3>
+    <table class='table table-bordered table-light table-striped'>
         <thead class='thead-inverse'>
             <tr>
                 <th>Event Name</th>
@@ -90,7 +90,7 @@
         </tbody>
     </table>
     <div>
-      <h3 class="mt-3" id="teams">Teams</h3>
+      <h3 class="mt-3 head" id="teams">Teams</h3>
         <div class="card-block row d-flex justify-content-around" style="background-col:lightgrey">
         <% @teams.each do |team| %>
             <% if team.members.count > 0 %>
