--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid cal-con">
 	<div class="row d-flex justify-content-center">
 		<div class="col-lg-11">
-	<h1 class="page-head">All Events</h1>
+	<h1 class="page-head head">All Events</h1>
     <div id="calendar"></div>
 
 
