--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row d-flex justify-content-center">
 	<div class="col-lg-8">
-	<h4 class="page-head"> New Event</h4>
+	<h4 class="page-head head"> New Event</h4>
 	<%= render 'form'%>
 </div>
 </div>
