--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="min-height: 60vh">
 <div class="row" style="justify-content: center;">
 	<div class="col-md-6">
-		<h1>New Team</h1>
+		<h1 class="page-head head">New Team</h1>
 		<%= render 'form' %>
 	</div>
 </div>
