--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,8 +1,10 @@
 
-<div class="container">
+<div class="container" style="margin-top:1rem">
 	<!-- <p>dashboard/teams</p> -->
-	<h4><%= @team.name %></h4>
-	<h5><%= @team.team_category.name %> team</h5>
+	<div class="team-info">
+	<h4 class="head"><%= @team.name %></h4>
+	<h5 class="head"><%= @team.team_category.name %> team</h5>
+  </div>
 	<div class="row d-flex">
 		<div class="col-md-6">
 			<div class="card item">
