--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:title, "Edit user") %>
 <div class="row d-flex justify-content-center">
   <div class="col-md-6 col-md-offset-3">
-    <h1>Update your profile</h1>
+    <h1 class="head">Update your profile</h1>
 
     <%= simple_form_for(@user) do |f| %>
       <%= f.input :first_name, class: 'form-control' %>
