--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -87,8 +87,10 @@
 					</ul>
 				</div>
 
-			</div>
-		</div>
+	</div>
+
+	</div>
+
 		<div class="col-md-3">
 			<div class="row">
 
@@ -96,3 +98,4 @@
 		</div>
 
 	</div>
+</div> <!-- end of container -->
