Separate event targets into goals and outcome. Cont work on admin dashboard

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -23,9 +23,9 @@
 </div>
 <div class="col-6">
   <h4>Targets</h4>
-  <%= f.input :sign_ups, label: 'Sign Ups'%>
-  <%= f.input :show_ups, label: 'Show Ups'%>
-  <%= f.input :signatures, label: 'Signatures'%>
+  <%= f.input :sign_up_goals, label: 'Sign Up Goals'%>
+  <%= f.input :show_up_goals, label: 'Show Up Goals'%>
+  <%= f.input :signature_goals, label: 'Signature Goals'%>
 </div>
 </div>
   <!-- Selecting an canvas captain -->
