--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -10,15 +10,24 @@
     <h3>New Sign Ups</h3>
 
     <div class='card col-md-12' style="border:0">
-            <div class='card-header d-flex'><strong> New Sign Ups (Guests): </strong><%= @stats[:guests] %></div>
+            <div class='card-header d-flex'><strong>Guests:&nbsp;</strong> <%= @stats[:guests] %></div>
                     <% @guest_users.each do |volunteer| %>
-                        <%= first_event = UserEvent.where(user: volunteer). %>
+                        <% first_event = volunteer.attended_events.first %>
                         <div class="mt-2 mb-2 border border-bottom-1">
                         <strong class="pl-2">Full name:</strong> <%= volunteer.full_name %>
                         <br>
                         <strong class="pl-2">Email:</strong> <%= volunteer.email %>
                         <br>
+                        <strong class="pl-2">Phone Number: </strong> <%= volunteer.phone_number %>
+                        <br>
+                        <strong class="pl-2">Anything else we should know?</strong> <%= volunteer.additional_info %>
+                        <br>
+                        <strong class="pl-2">Previous Volunteer? </strong> <%= volunteer.previous_volunteer %>
+                        <br>
                         <strong class="pl-2">Date Signed up: </strong> <%= volunteer.created_at.strftime('%A %B %d %Y') %>
+                        <br>
+                        <strong class="pl-2">Signed Up For: </strong> <% if first_event %><%= first_event.name %><% end %>
+                        <br>
                         <%= form_tag("upcat/#{volunteer.id}", method: :patch, class: "pull-right") do %>
                        <div class="field pb-1 pl-2">
                            <%= label(:user_category, "user_category") %>
@@ -30,7 +39,7 @@
                     <% end %>
     </div>
 
-   <h3 id="users">Users</h3>
+   <h3 id="users">Current Leads and Volunteers</h3>
  </div>
 
     <div class="row d-flex justify-content-between">
