--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -8,7 +8,7 @@
   </div>
  <div class="row">
 
-    <h3>New Sign Ups</h3>
+    <h3 class="mt-3 head">New Sign Ups</h3>
 
     <div class='card col-md-12' style="border:0">
             <div class='card-header d-flex'><strong>Guests:&nbsp;</strong> <%= @stats[:guests] %></div>
@@ -40,8 +40,7 @@
                     <% end %>
     </div>
 
-   <h3 id="users">Current Leads and Volunteers</h3>
-
+   <h3 class="mt-3 head" id="users">Current Leads and Volunteers</h3>
  </div>
 
     <div class="row d-flex justify-content-between">
