Minor styling changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,8 @@
 body {
   background-image: image-url('darkspace.jpg');
   background-size: cover;
+  background-attachment: fixed;
+  background-color: black;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -298,7 +300,7 @@ h1.page-head {
   margin-top: 1rem;
 }
 .details p {
-  line-height: 1.2em;
+  line-height: 1.4em;
 }
 
 
