Add target outcomes to event create and edit form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -26,6 +26,9 @@
   <%= f.input :sign_up_goals, label: 'Sign Up Goals'%>
   <%= f.input :show_up_goals, label: 'Show Up Goals'%>
   <%= f.input :signature_goals, label: 'Signature Goals'%>
+  <%= f.input :sign_up_outcome, label: 'Sign Up Outcome', placeholder: 'Fill in after event' %>
+  <%= f.input :show_up_outcome, label: 'Show Up Outcome', placeholder: 'Fill in after event' %>
+  <%= f.input :signature_outcome, label: 'Signatures Outcome', placeholder: 'Fill in after event' %>
 </div>
 </div>
   <!-- Selecting an canvas captain -->
