--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -12,7 +12,7 @@
 
     <div class='card col-md-12' style="border:0">
             <div class='card-header d-flex'><strong>Guests:&nbsp;</strong> <%= @stats[:guests] %></div>
-                <table>
+                <table class="table">
                     <thead>
                         <tr>
                             <th>Full Name</th>
@@ -20,35 +20,35 @@
                             <th>Phone Number</th>
                             <th>Additional Info</th>
                             <th>Previous Volunteer?</th>
+                            <th>Date Signed Up</th>
+                            <th>Event Signed Up For</th>
+                            <th>Change User Category</th>
+                            <th></th>
                         </tr>
                     </thead>
-                </table>
-                    <% @guest_users.each do |volunteer| %>
-                        <% first_event = volunteer.attended_events.first %>
-                        <div class="mt-2 mb-2 border border-bottom-1">
-                        <strong class="pl-2">Full name:</strong> <%= volunteer.full_name %>
-                        <br>
-                        <strong class="pl-2">Email:</strong> <%= volunteer.email %>
-                        <br>
-                        <strong class="pl-2">Phone Number: </strong> <%= volunteer.phone_number %>
-                        <br>
-                        <strong class="pl-2">Anything else we should know?</strong> <%= volunteer.additional_info %>
-                        <br>
-                        <strong class="pl-2">Previous Volunteer? </strong> <%= volunteer.previous_volunteer %>
-                        <br>
-                        <strong class="pl-2">Date Signed up: </strong> <%= volunteer.created_at.strftime('%A %B %d %Y') %>
-                        <br>
-                        <strong class="pl-2">Signed Up For: </strong> <% if first_event %><%= first_event.name %><% end %>
-                        <br>
-                        <%= form_tag("upcat/#{volunteer.id}", method: :patch, class: "pull-right") do %>
+                    <tbody>
+                        <% @guest_users.each do |volunteer| %>
+                            <% first_event = volunteer.attended_events.first %>
+                            <tr>
+                                <td><%= volunteer.full_name %></td>
+                                <td><%= volunteer.email %></td>
+                                <td><%= volunteer.phone_number %></td>
+                                <td><%= volunteer.additional_info %></td>
+                                <td><%= volunteer.previous_volunteer %></td>
+                                <td><%= volunteer.created_at.strftime('%B %d %Y') %></td>
+                                <td><% if first_event %><%= first_event.name %><% end %></td>
+                                <td><%= form_tag("upcat/#{volunteer.id}", method: :patch, class: "pull-right") do %>
                        <div class="field pb-1 pl-2">
                            <%= label(:user_category, "user_category") %>
                            <%= select_tag "user_category", "<option>General Volunteer</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
                            <%= submit_tag "Submit", class:"btn btn-primary"%>
                        </div>
-                    </div>
+                            <% end %></td>
+                            </tr>
+                            <td>Not contacted</td>
                         <% end %>
-                    <% end %>
+                    </tbody>
+                </table>
     </div>
 
    <h3 class="mt-3 head" id="users">Current Leads and Volunteers</h3>
