--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -12,7 +12,7 @@
 
     <div class='card col-md-12' style="border:0">
             <div class='card-header d-flex'><strong>Guests:&nbsp;</strong> <%= @stats[:guests] %></div>
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>Full Name</th>
