--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,7 +22,7 @@
   <%= f.input :attachment_url, label: 'Attachment URL'%>
 </div>
 <div class="col-6">
-  <h4>Targets</h4>
+  <h4 class="head">Targets</h4>
   <%= f.input :sign_up_goals, label: 'Sign Up Goals'%>
   <%= f.input :show_up_goals, label: 'Show Up Goals'%>
   <%= f.input :signature_goals, label: 'Signature Goals'%>
