add canvass captain phone number to show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -65,7 +65,8 @@
 
 
 							<p><b>Canvass Captain : </b><br>
-							<%= @lead&.full_name %><br></p>
+							<%= @lead&.full_name %><br>
+							<%= @lead&.phone_number %></p>
 							<p><b>Data Captain : </b><br>
 							<%= @data_captain&.full_name %><br></p>
 
