--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,5 @@
 <%=simple_form_for @event do |f|%>
-<%= f.input :name, label: 'Canvass Name'%>
+<%= f.input :name, label: 'Name of Event'%>
 
 <div class="row">
   <div class="col-4">
@@ -31,32 +31,48 @@
   <%= f.input :signature_outcome, label: 'Signatures Outcome', placeholder: 'Fill in after event' %>
 </div>
 </div>
-  <!-- Selecting an canvas captain -->
   <div class="row">
-    <div class="col-3">
-      <%= f.label :lead_id %><p>
-        <%= f.select :lead_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>
+
+      <!-- Selecting an canvas captain -->
+
+      <div class="col-3">
+        <%= f.label :canvas_captain_id %><p>
+        <%= f.select :canvas_captain_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>  
       </div>
+
       <!-- Selecting an data captain -->
       <div class="col-3">
         <%= f.label :data_captain_id %><p>
           <%= f.select :data_captain_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>
         </div>
 
-      <!-- Selecting a leader for that particular event (from all the team leads) -->
+      <div class="col-3"></div>
+      <div class="col-3"></div>
 
-      <div class="col-3">
+  </div>
+
+  <div class="row">
+
+      <!-- Selecting the type of event -->
+
+      <div class="col-4">
         <%= f.label :event_category_id %><p>
           <%= f.select :event_category_id, @event_categories.map { |category| [category.name, category.id] } %>
         </div>
 
         <!-- Selecting a team that this event belongs to  -->
-        <div class="col-3">
+        <div class="col-4">
           <%= f.label :team_id %><p>
             <%= f.select :team_id, @teams.map { |team| [team.name, team.id] } %>
-          </div>
-
         </div>
+
+          <!-- Select the leader of that team -->
+        <div class="col-4">
+          <%= f.label :team_lead_id %><p>
+          <%= f.select :lead_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>
+        </div>
+
+  </div>
 
         <%= f.submit class:"btn btn-primary"%>
         <% end %>
