--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,12 +34,12 @@
 		%>
 
   <div class="col-md-3 content">
+    	<h3>Team</h3>
+    	<p><%= @event.team&.name %></p>
 		<h3>Team Lead </h3>
-		<p> <%= @lead&.full_name %></p>
+		<p><%= @event.team.team_lead.full_name %></p>
 		<h3>Created By </h3>
 		<p> <%= @event.creator&.full_name %></p>
-    <h3>Team</h3>
-    <p><%= @event.team&.name %></p>
 
 
 		<h3>Attendees </h3>
@@ -79,8 +79,8 @@
 
 
 							<p><b>Canvass Captain : </b><br>
-							<%= @lead&.full_name %><br>
-							<%= @lead&.phone_number %></p>
+							<%= @canvas_captain&.full_name %><br>
+							<%= @canvas_captain&.phone_number %></p>
 							<p><b>Data Captain : </b><br>
 							<%= @data_captain&.full_name %><br></p>
 
