Add message to guests on event show page and remove sign up buttons if they are already signed up.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -301,6 +301,14 @@ h1.page-head {
   line-height: 1.4em;
 }
 
+// styling sign up message on event show page
+
+.signed-up-message {
+  padding: 10px;
+  background-color: #5cb85c;
+  display: flex;
+}
+
 
 // footer
 
