--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -304,6 +304,7 @@ h1.page-head {
 // styling sign up message on event show page
 
 .signed-up-message {
+  margin-top: 10px;
   padding: 10px;
   background-color: #5cb85c;
   display: flex;
