--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,15 +23,21 @@
 		<% end %>
 	<% end %>
 
-	<% if !@event.guest_ids.include?(current_user.id) %>
+	<% if current_user %>
+		<% if !@event.guest_ids.include?(current_user.id) %>
+			<%= link_to 'Sign Up for this Event!', event_neweventsignup_path(@event), class: "btn btn-success" %>
+		<% end %>
+	<% else %>
 		<%= link_to 'Sign Up for this Event!', event_neweventsignup_path(@event), class: "btn btn-success" %>
 	<% end %>
 
-	<% if @event.guest_ids.include?(current_user.id) %>
-		<div class="card signed-up-message">
-			<h5>You are signed up for this event!</h5>
-			<p>If you need to cancel, please contact this event's team lead <strong><%= @event.team.team_lead.full_name %></strong> at <strong><%= @event.team.team_lead.phone_number %></strong>.  Your canvass captain is <strong><%= @event.canvas_captain.full_name %></strong> at <strong><%= @event.canvas_captain.phone_number %></strong> - please make sure you have their information with you at the shift.</p>
-		</div>
+	<% if current_user %>
+		<% if @event.guest_ids.include?(current_user.id) %>
+			<div class="card signed-up-message">
+				<h5>You are signed up for this event!</h5>
+				<p>If you need to cancel, please contact this event's team lead <strong><%= @event.team.team_lead.full_name %></strong> at <strong><%= @event.team.team_lead.phone_number %></strong>.  Your canvass captain is <strong><%= @event.canvas_captain.full_name %></strong> at <strong><%= @event.canvas_captain.phone_number %></strong> - please make sure you have their information with you at the shift.</p>
+			</div>
+		<% end %>
 	<% end %>
   </div>
 
