--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -428,6 +428,11 @@ h1.page-head {
   color: #BF55EC;
 }
 
+.card.dash > h3 {
+  margin-top: 10px;
+  line-height: 1.3em;
+}
+
 
 .card.item {
   display: flex;
