--- a/app/views/admin/dashboard/teams.html.erb
+++ b/app/views/admin/dashboard/teams.html.erb
@@ -1,8 +1,12 @@
+<div class="container-fluid">
     <h3 class="mt-3 head" id="teams">Teams</h3>
-      <div class="card-block row d-flex justify-content-around" style="background-col:lightgrey">
+
+    		<%= link_to 'Add a team', new_team_path, style: 'color: black', class: 'btn btn-block add-team-button' %>
+
+      <div class="row d-flex justify-content-around">
       <% @teams.each do |team| %>
           <% if team.members.count > 0 %>
-          <div class="card col-md-4" style="border:0">
+          <div class="col-md-3 teambg" style="background-color: rgba(255, 255, 255, 0.5)">
               <div class="card-header"><strong><%= team.name %></strong></div>
               <div class="list-group">
               <% team.members.each do |member| %>
@@ -18,3 +22,4 @@
       <% end %>
       </div>
   </div>
+</div>
